--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>moto4rent - Închiriere motociclete</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="nav.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div id="preloader">
         <div class="preloader-road"></div>
         <div class="preloader-moto">
-            <img src="preload.png" alt="">
+            <img src="preload.png" alt="" >
         </div>
       </div>
     <header>
@@ -21,12 +26,15 @@
         </div>
         <nav>
             <a href="#">ACASĂ</a>
-            <a href="#">DESPRE NOI</a>
-            <a href="#">MOTOCICLETE</a>
-            <a href="#">CONTACTE</a>
+            <a href="about.html">DESPRE NOI</a>
+            <a href="moto.html">MOTOCICLETE</a>
+            <a href="contacts.html">CONTACTE</a>
+
+
+
         </nav>
         <div class="cont-personal">
-            <a href="#">CONT PERSONAL</a>
+            <a href="login.html">CONT PERSONAL</a>
         </div>
     </header>
     <section class="hero">
@@ -166,6 +174,96 @@
         </div>
     </section>
     
+    <!-- Testimonial Section -->
+    <section class="testimonial-section">
+        <div class="container">
+            <div class="testimonial-card">
+                <div class="quote-mark-top">"</div>
+                <div class="testimonial-content">
+                    <div class="testimonial-image"></div>
+                    <div class="testimonial-text-content">
+                        <p class="testimonial-text">
+                            Am creat Moto4Rent din pasiunea mea pentru motociclete. Suntem prezenți pe piața din Moldova din 2020, iar de atunci ne-am dezvoltat constant. Parcul nostru de motociclete a crescut considerabil, iar de fiecare dată am încercat să venim în sprijinul fiecărui client în parte.
+                        </p>
+                        <div class="testimonial-author">Onică Damian</div>
+                        <div class="testimonial-role">Fondator - Moto4Rent</div>
+                    </div>
+                </div>
+                <div class="quote-mark-bottom">"</div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer class="footer-section">
+        <div class="container">
+            <div class="footer-main">
+                <div class="logo-section">
+                    <a href="#" class="logo">
+                        <div class="logo-line1">
+                            MOTO<span class="logo-number">4</span>RENT
+                        </div>
+                    </a>
+                    <div class="social-links">
+                         <a href="https://www.facebook.com/" class="social-link facebook" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.instagram.com" class="social-link instagram" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.youtube.com" class="social-link youtube" title="YouTube"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://www.tiktok.com" class="social-link tiktok" title="TikTok"><i class="fa-brands fa-tiktok"></i></a>
+                    </div>
+                </div>
+
+                <div class="info-grid">
+                    <div class="info-column">
+                        <h3>Navighează</h3>
+                        <ul>
+                            <li>
+                                <div class="info-icon"><i class="fa-solid fa-motorcycle"></i></div>
+                                <span>Motociclete</span>
+                            </li>
+                            <li>
+                                <div class="info-icon"><i class="fa-solid fa-up-long"></i></div>
+                                <span>Cursuri de perfecionare</span>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="info-column">
+                        <h3>Informaii utile</h3>
+                        <ul>
+                            <li>
+                                <div class="info-icon"><i class="fa-solid fa-money-check"></i></div>
+                                <span>Metodă de plată</span>
+                            </li>
+                            <li>
+                                <div class="info-icon"><i class="fa-solid fa-question"></i></div>
+                                <span>Întrebări frecvente</span>
+                            </li>
+                            <li>
+                                <div class="info-icon"><i class="fa-solid fa-info"></i></div>
+                                <span>Despre noi</span>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="info-column">
+                        <h3>Contacte</h3>
+                        <div class="contact-item">
+                            <div class="contact-icon"><i class="fa-solid fa-globe"></i></div>
+                            <span>str Independenței 7</span>
+                        </div>
+                        <div class="contact-item">
+                            <div class="contact-icon"><i class="fa-solid fa-phone"></i></div>
+                            <span>0 (60) 998 803</span>
+                        </div>
+                        <div class="contact-item">
+                            <div class="contact-icon"><i class="fa-solid fa-envelope"></i></div>
+                            <span>onica.damian@mail.ru</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="slider.js"></script>
     <script src="filter.js"></script>
