--- a/contacts.html
+++ b/contacts.html
@@ -166,6 +166,25 @@
   </style>
 </head>
 <body>
+  <header>
+    <div class="burger-menu" id="burger-menu" style="display:none;">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    <div class="logo">
+        <img src="logo.png" alt="Moto4Rent">
+    </div>
+    <nav>
+        <a href="index.html">ACASĂ</a>
+        <a href="about.html">DESPRE NOI</a>
+        <a href="moto.html">MOTOCICLETE</a>
+        <a href="contacts.html">CONTACTE</a>
+    </nav>
+    <div class="cont-personal">
+        <a href="login.html">CONT PERSONAL</a>
+    </div>
+</header>
   <div class="container">
     <h1 class="page-title">Contacte</h1>
     <div class="contact-info">
@@ -237,9 +256,7 @@
             <div class="footer-main">
                 <div class="logo-section">
                     <a href="#" class="logo">
-                        <div class="logo-line1">
-                            MOTO<span class="logo-number">4</span>RENT
-                        </div>
+                        <img src="logo.png" alt="Moto4Rent">
                     </a>
                     <div class="social-links">
                         <a href="#" class="social-link facebook" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
