--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                 <input type="password" class="form-input" required>
             </div>
 
-            <button type="button" class="auth-btn">Autentificare</button>
+            <button type="button" class="auth-btn" onclick="window.location.href='dashboard.html'">Autentificare</button>
         </form>
 
     
