--- a/about.html
+++ b/about.html
@@ -12,6 +12,11 @@
 </head>
 <body>
     <header>
+        <div class="burger-menu" id="burger-menu" style="display:none;">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div class="logo">
             <img src="logo.png" alt="Moto4Rent">
         </div>
@@ -51,24 +56,21 @@
         <!-- Разделитель между контентом и футером -->
         <div class="about-footer-separator"></div>
         <footer class="footer-section">
-        <div class="footer-container">
-            <div class="footer-main">
-                <div class="logo-section">
-                    <a href="#" class="logo">
-                        <div class="logo-line1">
-                            MOTO<span class="logo-number">4</span>RENT
-                        </div>
-                    </a>
-                    <div class="social-links">
-                         <a href="https://www.facebook.com/" class="social-link facebook" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://www.instagram.com" class="social-link instagram" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://www.youtube.com" class="social-link youtube" title="YouTube"><i class="fa-brands fa-youtube"></i></a>
-                        <a href="https://www.tiktok.com" class="social-link tiktok" title="TikTok"><i class="fa-brands fa-tiktok"></i></a>
-                    </div>
+    <div class="container">
+        <div class="footer-main">
+            <div class="logo-section">
+                <a href="#" class="logo">
+                    <img src="logo.png" alt="Moto4Rent">
+                </a>
+                <div class="social-links">
+                    <a href="https://www.facebook.com/" class="social-link facebook" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com" class="social-link instagram" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.youtube.com" class="social-link youtube" title="YouTube"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.tiktok.com" class="social-link tiktok" title="TikTok"><i class="fa-brands fa-tiktok"></i></a>
                 </div>
-
-                <div class="info-grid">
-                    <div class="info-column">
+            </div>
+            <div class="info-grid">
+                <div class="info-column">
                         <h3>Navighează</h3>
                         <ul>
                             <li>
@@ -77,7 +79,7 @@
                             </li>
                             <li>
                                 <div class="info-icon"><i class="fa-solid fa-up-long"></i></div>
-                                <span>Cursuri de perfecionare</span>
+                                <span>Cursuri de perfecționare</span>
                             </li>
                         </ul>
                     </div>
@@ -115,10 +117,10 @@
                             <span>onica.damian@mail.ru</span>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 
     <!-- Font Awesome CDN pentru иконок -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -130,7 +132,7 @@
       });
     </script>
     <style>
-/* Локальный стиль только для этой страницы, чтобы .footer-container выглядел как .container */
+
 .footer-container {
     max-width: 1400px;
     margin: 0 auto;
@@ -142,7 +144,6 @@
     height: 48px;
     width: 100%;
     background: transparent;
-    /* Можно добавить цвет: background: #fff; */
 }
 @media (max-width: 1200px) {
     .footer-container {
